--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "better-scroll": "^2.0.4",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
     "vant": "^2.10.9",
@@ -25,6 +26,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.20",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
