--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "better-scroll": "^2.0.4",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
+    "swiper": "^5.4.1",
     "vant": "^2.10.9",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
